--- a/GW2014_Muffins/js/controler/index.html
+++ b/GW2014_Muffins/js/controler/index.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="js/requestanimframe.js"></script>
 <script type="text/javascript" src="js/run.js"></script>
 <script type="text/javascript" src="js/class.js"></script>
+<script type="text/javascript" src="js/ui.js"></script>
 <script type="text/javascript">		
 //Fonction  d'initialisation - se lance quand la page HTML est lue
 window.onload = function(){
@@ -21,7 +22,8 @@ window.onload = function(){
 	canvasWidth = canvas.width = 1280;
 	canvasHeight = canvas.height = 768;
 	gravity = 0.8;
-	floor = 500;
+	//floor = 500;
+	ground = new Ground (100, 350);
 	cube = new Cube (100,250);
 	repletion = new Repletion (10,10);
 	run();	
