--- a/GW2014_Muffins/js/controler/index.html
+++ b/GW2014_Muffins/js/controler/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 </head>
-<body style="margin:0" bgcolor=black>
+<body style="margin:0" bgcolor=grey>
 	<div id="conteneur">
-		<center>
+		
 		<canvas id="canvas" height=768 width=1280></canvas>
-		</center>
+		
 	</div>
 </body>
 <script type="text/javascript" src="js/requestanimframe.js"></script>
 <script type="text/javascript" src="js/run.js"></script>
 <script type="text/javascript" src="js/class.js"></script>
-<script type="text/javascript" src="js/ui.js"></script>
+<script type="text/javascript" src="../ui.js"></script>
 <script type="text/javascript">		
 //Fonction  d'initialisation - se lance quand la page HTML est lue
 window.onload = function(){
