--- a/GW2014_Muffins/js/controler/index.html
+++ b/GW2014_Muffins/js/controler/index.html
@@ -29,7 +29,9 @@ window.onload = function(){
 	canvasHeight = canvas.height = 768;
 	gravity = 0.8;
 	//floor = 500;
-	ground = new Ground (100, 350);
+	loupImage = new Image();
+	loupImage.src = "asset/loup.png"
+	ground = new Ground (100, 500);
 	cube = new Cube (100,100);
 	
 	gameScene.Start();
