Add animation function
Ajout function drawImage dans le run
test pour vérifier le foncionnement de cette fonction (à supprimer)

--- a/GW2014_Muffins/js/controler/index.html
+++ b/GW2014_Muffins/js/controler/index.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="js/gameScene.js"></script>
 <script type="text/javascript" src="js/skillBar.js"></script>
 <script type="text/javascript" src="js/class.js"></script>
+<script type="text/javascript" src="js/test.js"></script>
 <script type="text/javascript" src="../ui.js"></script>
 
 <script type="text/javascript">
@@ -33,7 +34,7 @@ window.onload = function(){
 	loupImage.src = "asset/loup.png"
 	ground = new Ground (100, 500);
 	cube = new Cube (100,100);
-	
+	cube2 = new Cube2 (100,100);
 	gameScene.Start();
 	repletion = new Repletion (10,10);
 	run();	
