--- a/GW2014_Muffins/main.html
+++ b/GW2014_Muffins/main.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>GameWeek 2014 - Muffins</title>
     <script data-main="src/js/app.js" src="lib/require.js"></script>
+    <link href="src/css/style.css" rel="stylesheet" />
 </head>
 <body>
-
 </body>
 </html>
